# easy-social

./: .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
easy_social/: auth.py  models.py  social.py
easy_social/static/css/: app.css
easy_social/static/js/: app.js
easy_social/templates/: base.html
easy_social/templates/auth/: register.html
easy_social/templates/social/: _composer.html  _post.html
migrations/versions/: 348283e0d66f_add_poll_models.py
tests/: conftest.py  test_integration_captcha.py  test_poll_e2e.py  test_poll_integration.py  test_poll_models.py  test_ui_captcha.py  test_unit_captcha.py
