[project]
name = "easy-social"
version = "0.1.0"
description = "A compact Twitter-like social media platform built with Flask."
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "easy-social contributors" }]
dependencies = [
    "Flask>=3.0.0,<4.0.0",
    "Flask-Login>=0.6.3,<0.7.0",
    "Flask-Migrate>=4.0.7,<5.0.0",
    "Flask-SQLAlchemy>=3.1.1,<4.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "supabase>=2.24.0,<3.0.0",
    "captcha>=0.7.1,<0.8.0",
]

[tool.poetry]
packages = [{ include = "easy_social" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
selenium = "^4.43.0"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = "-m 'not ui'"
markers = [
    "unit: focused unit tests for isolated functions and model behavior",
    "integration: Flask integration tests that exercise routes or cross-module behavior",
    "ui: browser-based Selenium UI tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
